--- a/MvcAWSPostgresEC2/appsettings.json
+++ b/MvcAWSPostgresEC2/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostGresConnection": "Host=localhost; Port=5432; Username=postgres; Password=postgres; Database=hospital"
+    "PostGresConnection": "Host=172.31.87.43; Port=5432; Username=postgres; Password=postgres; Database=hospital"
   }
 }
